# internal/api/v1/invoices.go
@@ -1,1 +1,13 @@
 package v1
+
+import "invoice-backend/internal/repositories/invoices"
+
+type InvoiceHandler struct {
+	invoiceRepo invoices.Repository
+}
+
+func NewInvoiceHandler(invoiceRepo invoices.Repository) *InvoiceHandler {
+	return &InvoiceHandler{
+		invoiceRepo: invoiceRepo,
+	}
+}
